--- a/JavaScript/JSbasico/Navbar/index.html
+++ b/JavaScript/JSbasico/Navbar/index.html
@@ -35,7 +35,7 @@
             <li><a href="sobre">Sobre</a></li>
             <li><a href="servico">Serviço</a></li>
             <li><a href="contato">Contato</a></li>
-            <li><a href="#" class="action-btn">Get Started</a></li>
+            <li><a href="#" class="action-btn_home">Get Started</a></li>
         </div>
 
     </header>
