--- a/JavaScript/JSbasico/Lista de Tarefas/index.html
+++ b/JavaScript/JSbasico/Lista de Tarefas/index.html
@@ -4,20 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Timer</title>
+    <title>Lista de Tarefas</title>
     <link rel="stylesheet" href="modelo/assets/css/style.css">
 </head>
 
 <body>
     <section class="container">
-        <h1>Meu Timer</h1>
-        <p class="relogio">00:00:00</p>
+        <h1>Lista de Tarefas</h1>
         <p>
-            <button class="iniciar">Iniciar</button>
-            <button class="pausar">Pausar</button>
-            <button class="resetar">Resetar</button>
-        </p>
+            <input type="text" class="input-tarefa">
+            <button class="btn-tarefa">Adicionar Tarefa</button>
 
+        </p>
+        <ul class="tarefas">
+
+        </ul>
         
     </section>
 
